--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,11 +22,11 @@ steps:
 
 - task: ArchiveFiles@2
   inputs:
-    rootFolderOrFile: '$(Build.BinariesDirectory)'
+    rootFolderOrFile: '.'
     includeRootFolder: false
-    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/node-red.zip'
     replaceExistingArchive: false
-  displayName: "Archive zip file"
+  displayName: "Archive node-red.zip file"
 
 - task: PublishBuildArtifacts@1
   inputs:
