--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "cors": "2.8.5",
         "cronosjs": "1.7.1",
         "denque": "2.1.0",
+        "dialogflow-full-nodered": "^1.0.10",
         "express": "4.18.1",
         "express-session": "1.17.3",
         "form-data": "4.0.0",
@@ -65,6 +66,7 @@
         "multer": "1.4.5-lts.1",
         "mustache": "4.2.0",
         "node-red-admin": "^3.0.0",
+        "node-red-contrib-mssql-plus": "^0.10.2",
         "node-watch": "0.7.3",
         "nopt": "5.0.0",
         "oauth2orize": "1.11.1",
